--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4",
@@ -46,7 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "sass": "^1.57.1"
-  }
+  "homepage": "https://tomateunrespiro.net/"
 }
